feat : finish destop view & phone view processing on learning-footprint

--- a/competition.html
+++ b/competition.html
@@ -21,9 +21,9 @@
 				<a href="teacher-info.html"><img src="images/ic-teacher.svg">導師資訊</a>
 				<label>學習歷程</label>
 				<a href="course-map.html"><img src="images/ic-coursemap.svg">課程地圖</a>
-				<a href="learning-footprint.html"><img src="images/blue-ic-footprints.svg">學習足跡</a>
+				<a href="learning-footprint.html"><img src="images/ic-footprints.svg">學習足跡</a>
 				<a href="course-overview.html"><img src="images/ic-classgrid.svg">修課總覽</a>
-				<a href="graduate.html"><img src="images/ic-classgrid.svg">畢業審查</a>
+				<a href="graduate.html"><img src="images/ic-graduation.svg">畢業審查</a>
 				<label>活動經歷</label>
 				<a href="club.html"><img src="images/ic-societies.svg">社團經歷</a>
 				<a href="competition.html"><img src="images/ic-cup.svg">競賽成果</a>
@@ -41,13 +41,13 @@
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th class="table-column5">學年期</th>
+							<th class="table-column7">學年期</th>
 							<th class="table-column6">活動名稱</th>
 							<th class="table-column6">登記單位</th>
 							<th class="expand-btn"></th>
 						</tr>
 						<tr>
-							<td class="table-column5">112-2</td>
+							<td class="table-column7">112-2</td>
 							<td class="table-column6">外交部2007年大專校院學生國際問替討論文</td>
 							<td class="table-column6">教學發展中心教師發展組</td>
 							<td class="expand-btn"><img src="images/arrow.svg"></td>
@@ -65,9 +65,10 @@
 								<p class="table-detail-title">成績</p>
 								<p>第二名</p>
 							</td>
+							<td class="table-expand-td"></td>
 						</tr>
 						<tr>
-							<td class="table-column5">112-2</td>
+							<td class="table-column7">112-2</td>
 							<td class="table-column6">外交部2007年大專校院學生國際問替討論文</td>
 							<td class="table-column6">教學發展中心教師發展組</td>
 							<td class="expand-btn"><img src="images/arrow.svg"></td>
@@ -85,6 +86,7 @@
 								<p class="table-detail-title">成績</p>
 								<p>第二名</p>
 							</td>
+							<td class="table-expand-td"></td>
 						</tr>
 					</table>
 				</div>
