--- a/course-overview.html
+++ b/course-overview.html
@@ -21,9 +21,9 @@
 				<a href="teacher-info.html"><img src="images/ic-teacher.svg">導師資訊</a>
 				<label>學習歷程</label>
 				<a href="course-map.html"><img src="images/ic-coursemap.svg">課程地圖</a>
-				<a href="learning-footprint.html"><img src="images/blue-ic-footprints.svg">學習足跡</a>
+				<a href="learning-footprint.html"><img src="images/ic-footprints.svg">學習足跡</a>
 				<a href="course-overview.html"><img src="images/ic-classgrid.svg">修課總覽</a>
-				<a href="graduate.html"><img src="images/ic-classgrid.svg">畢業審查</a>
+				<a href="graduate.html"><img src="images/ic-graduation.svg">畢業審查</a>
 				<label>活動經歷</label>
 				<a href="club.html"><img src="images/ic-societies.svg">社團經歷</a>
 				<a href="competition.html"><img src="images/ic-cup.svg">競賽成果</a>
@@ -73,7 +73,7 @@
 							<td class="table-course"></td>
 							<td class="table-course">
 								<div class="course-tag">
-									<div class="course-color"></div>
+									<div class="course-color-1"></div>
 									<div class="course-detail">
 										<p class="course-name">英文基礎寫作</p>
 										<p class="course-teacher">王大明</p>
@@ -84,7 +84,7 @@
 							</td>
 							<td class="table-course">
 								<div class="course-tag">
-									<div class="course-color"></div>
+									<div class="course-color-2"></div>
 									<div class="course-detail">
 										<p class="course-name">機器學習</p>
 										<p class="course-teacher">王大明</p>
@@ -99,7 +99,7 @@
 							<td class="table-course"></td>
 							<td class="table-course">
 								<div class="course-tag">
-									<div class="course-color"></div>
+									<div class="course-color-3"></div>
 									<div class="course-detail">
 										<p class="course-name">英文基礎寫作</p>
 										<p class="course-teacher">王大明</p>
@@ -109,7 +109,7 @@
 							<td class="table-course"></td>
 							<td class="table-course">
 								<div class="course-tag">
-									<div class="course-color"></div>
+									<div class="course-color-4"></div>
 									<div class="course-detail">
 										<p class="course-name">機器學習</p>
 										<p class="course-teacher">王大明</p>
@@ -124,7 +124,7 @@
 							<td class="table-course"></td>
 							<td class="table-course">
 								<div class="course-tag">
-									<div class="course-color"></div>
+									<div class="course-color-4"></div>
 									<div class="course-detail">
 										<p class="course-name">英文基礎寫作</p>
 										<p class="course-teacher">王大明</p>
@@ -134,7 +134,7 @@
 							<td class="table-course"></td>
 							<td class="table-course">
 								<div class="course-tag">
-									<div class="course-color"></div>
+									<div class="course-color-3"></div>
 									<div class="course-detail">
 										<p class="course-name">機器學習</p>
 										<p class="course-teacher">王大明</p>
@@ -161,7 +161,7 @@
 							<td class="table-course"></td>
 							<td class="table-course">
 								<div class="course-tag">
-									<div class="course-color"></div>
+									<div class="course-color-2"></div>
 									<div class="course-detail">
 										<p class="course-name">機器學習</p>
 										<p class="course-teacher">王大明</p>
@@ -178,7 +178,7 @@
 							<td class="table-course"></td>
 							<td class="table-course">
 								<div class="course-tag">
-									<div class="course-color"></div>
+									<div class="course-color-1"></div>
 									<div class="course-detail">
 										<p class="course-name">機器學習</p>
 										<p class="course-teacher">王大明</p>
@@ -195,7 +195,7 @@
 							<td class="table-course"></td>
 							<td class="table-course">
 								<div class="course-tag">
-									<div class="course-color"></div>
+									<div class="course-color-3"></div>
 									<div class="course-detail">
 										<p class="course-name">機器學習</p>
 										<p class="course-teacher">王大明</p>
@@ -212,7 +212,7 @@
 							<td class="table-course"></td>
 							<td class="table-course">
 								<div class="course-tag">
-									<div class="course-color"></div>
+									<div class="course-color-3"></div>
 									<div class="course-detail">
 										<p class="course-name">機器學習</p>
 										<p class="course-teacher">王大明</p>
@@ -243,7 +243,7 @@
 							<td class="table-section">B</td>
 							<td class="table-course"></td>
 							<td class="table-course"><div class="course-tag">
-								<div class="course-color"></div>
+								<div class="course-color-4"></div>
 								<div class="course-detail">
 									<p class="course-name">去中心化應用程式之設計實務</p>
 									<p class="course-teacher">王大明</p>
