--- a/graduate.html
+++ b/graduate.html
@@ -21,9 +21,9 @@
 				<a href="teacher-info.html"><img src="images/ic-teacher.svg">導師資訊</a>
 				<label>學習歷程</label>
 				<a href="course-map.html"><img src="images/ic-coursemap.svg">課程地圖</a>
-				<a href="learning-footprint.html"><img src="images/blue-ic-footprints.svg">學習足跡</a>
+				<a href="learning-footprint.html"><img src="images/ic-footprints.svg">學習足跡</a>
 				<a href="course-overview.html"><img src="images/ic-classgrid.svg">修課總覽</a>
-				<a href="graduate.html"><img src="images/ic-classgrid.svg">畢業審查</a>
+				<a href="graduate.html"><img src="images/ic-graduation.svg">畢業審查</a>
 				<label>活動經歷</label>
 				<a href="club.html"><img src="images/ic-societies.svg">社團經歷</a>
 				<a href="competition.html"><img src="images/ic-cup.svg">競賽成果</a>
@@ -37,282 +37,199 @@
 				<div class="ic-login"><img src="images/ic-personal.svg"></div>
 			</div>
 			<div class="main-container">
-				<h1>轉系紀錄</h1>
+				<h1>畢業審查<span class="btn-edit">下載審核表<img src="images/ic-print.svg"></span></h1>
+				<div class="sub-container">
+					<article>
+						<p><label>姓名/系組</label>9000 電機資訊學院 / 9020資訊工程學系 - 適用109年入學生畢業規則</p>
+						<p><label>計入通識領域</label>文學與藝術（A1）歷史思維（A2）世界文明（A3）公民意識與社會分析（A5）生命科學（A8）</p>
+						<p><label>最低畢業學分</label>共同必修（9）＋ 系定必修（51）＋ 指定選修（30）＋ 一般選修（23）＋通識（15） =  總學分（128）</p>
+						<p><label>輔系</label>3030 經濟學系（112年核准）</p>
+						</article>
+				</div>
+			</div>
+			<div class="main-container">
+				<h1>共同必修課程</h1>
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th class="table-column1">核准學年期</th>
-							<th class="table-column2">修讀科系</th>
+							<th class="table-column7">課別</th>
+							<th class="table-column9">學年期</th>
+							<th class="table-column8">科目名稱</th>
+							<th class="table-column5">課號</th>
+							<th class="table-column5">課程識別碼</th>
+							<th>班次</th>
+							<th>學分</th>
+							<th>成績</th>
+							<th>備註</th>
 						</tr>
 						<tr>
-							<td class="table-column1">100-1</td>
-							<td class="table-column2">中國文學系</td>
+							<td class="table-column7">進階英文</td>
+							<td class="table-column9">100-1</td>
+							<td class="table-column8">進階英文二</td>
+							<td class="table-column5">AdvEnd 2012</td>
+							<td class="table-column5">00420520</td>
+							<td></td>
+							<td>0</td>
+							<td>免修</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="table-column7">國文</td>
+							<td class="table-column9">100-1</td>
+							<td class="table-column8">大學國文一</td>
+							<td class="table-column5">CHIN 1081</td>
+							<td class="table-column5">10181010</td>
+							<td></td>
+							<td>3</td>
+							<td>抵免</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="table-column7">服務學習</td>
+							<td class="table-column9">100-1</td>
+							<td class="table-column8">服務學習甲</td>
+							<td class="table-column5">CSIE1911</td>
+							<td class="table-column5">902001A0</td>
+							<td></td>
+							<td>0</td>
+							<td>抵免</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="table-column7">體育</td>
+							<td class="table-column9">102-2</td>
+							<td class="table-column8">游泳初級</td>
+							<td class="table-column5">PE2053</td>
+							<td class="table-column5">00250630</td>
+							<td></td>
+							<td>1</td>
+							<td>抵免</td>
+							<td></td>
 						</tr>
 					</table>
 				</div>
 			</div>
 			<div class="main-container">
-				<h1>退學紀錄</h1>
+				<h1>通識課程</h1>
+				<div class="sub-title">以下課程並非皆可計入通識學分，是否地以採計為通識學分請詳閱通識課注意事項。</div>
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th class="table-column1">核准學年期</th>
-							<th class="table-column2">原因</th>
+							<th class="table-column7">課別</th>
+							<th class="table-column9">學年期</th>
+							<th class="table-column8">科目名稱</th>
+							<th class="table-column5">課號</th>
+							<th class="table-column5">課程識別碼</th>
+							<th>班次</th>
+							<th>學分</th>
+							<th>成績</th>
+							<th>備註</th>
 						</tr>
 						<tr>
-							<td class="table-column1">100-1</td>
-							<td class="table-column2">C3 逾期未註冊</td>
+							<td class="table-column7">通識A1</td>
+							<td class="table-column9">111-2</td>
+							<td class="table-column8">Selected Readings in Modern Taiwanese Novels</td>
+							<td class="table-column5">TwLit5012</td>
+							<td class="table-column5">145UD180</td>
+							<td>02</td>
+							<td>2</td>
+							<td>抵免</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="table-column7">通識A5*</td>
+							<td class="table-column9">111-2</td>
+							<td class="table-column8">Principle of Macroeconomics</td>
+							<td class="table-column5">MD&PH5024</td>
+							<td class="table-column5">40552700</td>
+							<td>02</td>
+							<td>3</td>
+							<td>抵免</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="table-column7">通識A5*</td>
+							<td class="table-column9">111-2</td>
+							<td class="table-column8">Principle of Macroeconomics</td>
+							<td class="table-column5">MD&PH5024</td>
+							<td class="table-column5">40552700</td>
+							<td>02</td>
+							<td>3</td>
+							<td>抵免</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="table-column7">通識A5*</td>
+							<td class="table-column9">111-2</td>
+							<td class="table-column8">Principle of Macroeconomics</td>
+							<td class="table-column5">MD&PH5024</td>
+							<td class="table-column5">40552700</td>
+							<td>02</td>
+							<td>3</td>
+							<td>抵免</td>
+							<td></td>
 						</tr>
 					</table>
 				</div>
 			</div>
 			<div class="main-container">
-				<h1>休學紀錄</h1>
+				<h1>指定選修與一般選修</h1>
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th class="table-column1">核准學年期</th>
-							<th class="table-column3">原因</th>
-							<th class="table-column4">時長</th>
+							<th class="table-column7">課別</th>
+							<th class="table-column9">學年期</th>
+							<th class="table-column8">科目名稱</th>
+							<th class="table-column5">課號</th>
+							<th class="table-column5">課程識別碼</th>
+							<th>班次</th>
+							<th>學分</th>
+							<th>成績</th>
+							<th>備註</th>
 						</tr>
 						<tr>
-							<td class="table-column1">100-1</td>
-							<td class="table-column3">受疫情影響</td>
-							<td class="table-column4">2學期</td>
-						</tr>
-					</table>
-				</div>
-			</div>
-			<div class="main-container">
-				<h1>輔系紀錄</h1>
-				<div class="sub-container">
-					<table>
-						<tr>
-							<th class="table-column1">核准學年期</th>
-							<th class="table-column2">修讀科系</th>
+							<td class="table-column7">通識A1</td>
+							<td class="table-column9">111-2</td>
+							<td class="table-column8">Selected Readings in Modern Taiwanese Novels</td>
+							<td class="table-column5">TwLit5012</td>
+							<td class="table-column5">145UD180</td>
+							<td>02</td>
+							<td>2</td>
+							<td>抵免</td>
+							<td></td>
 						</tr>
 						<tr>
-							<td class="table-column1">100-1</td>
-							<td class="table-column2">中國文學系</td>
-						</tr>
-					</table>
-				</div>
-			</div>
-			<div class="main-container">
-				<h1>雙主修紀錄</h1>
-				<div class="sub-container">
-					<table>
-						<tr>
-							<th class="table-column1\">核准學年期</th>
-							<th class="table-column2">修讀科系</th>
+							<td class="table-column7">通識A5*</td>
+							<td class="table-column9">111-2</td>
+							<td class="table-column8">Principle of Macroeconomics</td>
+							<td class="table-column5">MD&PH5024</td>
+							<td class="table-column5">40552700</td>
+							<td>02</td>
+							<td>3</td>
+							<td>抵免</td>
+							<td></td>
 						</tr>
 						<tr>
-							<td class="table-column1">100-1</td>
-							<td class="table-column2">中國文學系</td>
-						</tr>
-					</table>
-				</div>
-			</div>
-			<div class="main-container">
-				<h1>跨校輔系雙主修紀錄</h1>
-				<div class="sub-container">
-					<table>
-						<tr>
-							<th class="table-column1">核准學年期</th>
-							<th class="table-column3">修讀學校</th>
-							<th class="table-column4">修讀科系</th>
+							<td class="table-column7">通識A5*</td>
+							<td class="table-column9">111-2</td>
+							<td class="table-column8">Principle of Macroeconomics</td>
+							<td class="table-column5">MD&PH5024</td>
+							<td class="table-column5">40552700</td>
+							<td>02</td>
+							<td>3</td>
+							<td>抵免</td>
+							<td></td>
 						</tr>
 						<tr>
-							<td class="table-column1">100-1</td>
-							<td class="table-column3">國立臺灣科系大學</td>
-							<td class="table-column4">應用外語系</td>
-						</tr>
-					</table>
-				</div>
-			</div>
-			<div class="main-container">
-				<h1>交換生紀錄</h1>
-				<div class="sub-container">
-					<table>
-						<tr>
-							<th class="table-column1">學年期</th>
-							<th class="table-column3">交換學校</th>
-							<th class="table-column4">時長</th>
-						</tr>
-						<tr>
-							<td class="table-column1">112-2</td>
-							<td class="table-column3">荷蘭萊頓大學</td>
-							<td class="table-column4">1學期</td>
-						</tr>
-						<tr>
-							<td class="table-column1">113-2</td>
-							<td class="table-column3">巴黎高等政治學院</td>
-							<td class="table-column4">1學期</td>
-						</tr>
-					</table>
-				</div>
-			</div>
-			<div class="main-container">
-				<h1>學程紀錄</h1>
-				<div class="sub-container">
-					<table>
-						<tr>
-							<th class="table-column1">學年期/日期</th>
-							<th class="table-column3">申請學程</th>
-							<th class="table-column4">狀態</th>
-						</tr>
-						<tr>
-							<td class="table-column1">112-2</td>
-							<td class="table-column3">教育學程</td>
-							<td class="table-column4">核准</td>
-						</tr>
-						<tr>
-							<td class="table-column1">112-2</td>
-							<td class="table-column3">教育學程</td>
-							<td class="table-column4">核准</td>
-						</tr>
-					</table>
-				</div>
-			</div>
-			<div class="main-container">
-				<h1>研習活動</h1>
-				<div class="sub-container">
-					<table>
-						<tr>
-							<th class="table-column5">學年期</th>
-							<th class="table-column6">活動名稱</th>
-							<th class="table-column6">主辦單位</th>
-							<th class="expand-btn"></th>
-						</tr>
-						<tr>
-							<td class="table-column5">112-2</td>
-							<td class="table-column6">台大椰林講座-東京大學藤井輝夫校長</td>
-							<td class="table-column6">共同教育中心</td>
-							<td class="expand-btn"><img src="images/arrow.svg"></td>
-						</tr>
-						<tr class="table-expand-row">
-							<td class="table-expand-td">
-								<p class="table-detail-title">日期</p>
-								<p>2023/12/12</p>
-							</td>
-							<td class="table-expand-td" colspan="3">
-								<p class="table-detail-title">活動性質</p>
-								<p>台大椰林講座</p>
-							</td>
-						</tr>
-						<tr>
-							<td class="table-column5">112-2</td>
-							<td class="table-column6">台大椰林講座-東京大學藤井輝夫校長</td>
-							<td class="table-column6">共同教育中心</td>
-							<td class="expand-btn"><img src="images/arrow.svg"></td>
-						</tr>
-						<tr class="table-expand-row">
-							<td class="table-expand-td">
-								<p class="table-detail-title">日期</p>
-								<p>2023/12/12</p>
-							</td>
-							<td class="table-expand-td" colspan="3">
-								<p class="table-detail-title">活動性質</p>
-								<p>台大椰林講座</p>
-							</td>
-						</tr>
-					</table>
-				</div>
-			</div>
-			<div class="main-container">
-				<h1>研習活動授予認證</h1>
-				<div class="sub-container">
-					<table>
-						<tr>
-							<th class="table-column5">學年期</th>
-							<th class="table-column6">活動名稱</th>
-							<th class="table-column6">主辦單位</th>
-							<th class="expand-btn"></th>
-						</tr>
-						<tr>
-							<td class="table-column5">112-2</td>
-							<td class="table-column6">111-1教學助理認證研習會</td>
-							<td class="table-column6">教學發展中心教師發展組</td>
-							<td class="expand-btn"><img src="images/arrow.svg"></td>
-						</tr>
-						<tr class="table-expand-row">
-							<td class="table-expand-td" colspan="4">
-								<p class="table-detail-title">活動性質</p>
-								<p>協助本校有意培任教學助理的學生瞭解相關工作內教師發展組認證研習會容，培育核心能力，成為授課老師的強力助手。</p>
-							</td>
-						</tr>
-						<tr>
-							<td class="table-column5">112-2</td>
-							<td class="table-column6">111-1教學助理認證研習會</td>
-							<td class="table-column6">共同教育中心</td>
-							<td class="expand-btn"><img src="images/arrow.svg"></td>
-						</tr>
-						<tr class="table-expand-row">
-							<td class="table-expand-td" colspan="4">
-								<p class="table-detail-title">活動性質</p>
-								<p>協助本校有意培任教學助理的學生瞭解相關工作內教師發展組認證研習會容，培育核心能力，成為授課老師的強力助手。</p>
-							</td>
-						</tr>
-					</table>
-				</div>
-			</div>
-			<div class="main-container">
-				<h1>研習訓練資料</h1>
-				<div class="sub-container">
-					<table>
-						<tr>
-							<th class="table-column5">學年期</th>
-							<th class="table-column6">活動名稱</th>
-							<th class="table-column6">主辦單位</th>
-							<th class="expand-btn"></th>
-						</tr>
-						<tr>
-							<td class="table-column5">112-2</td>
-							<td class="table-column6">2011服務學習暨社會服務隊成果發表會</td>
-							<td class="table-column6">課務組</td>
-							<td class="expand-btn"><img src="images/arrow.svg"></td>
-						</tr>
-						<tr class="table-expand-row">
-							<td class="table-expand-td">
-								<p class="table-detail-title">時數</p>
-								<p>5</p>
-							</td>
-							<td class="table-expand-td">
-								<p class="table-detail-title">起訖日期</p>
-								<p>2020/01~2020/01</p>
-							</td>
-							<td class="table-expand-td">
-								<p class="table-detail-title">證書號</p>
-								<p>001</p>
-							</td>
-							<td class="table-expand-td">
-								<p class="table-detail-title">狀態</p>
-								<p>合格</p>
-							</td>
-						</tr>
-						<tr>
-							<td class="table-column5">112-2</td>
-							<td class="table-column6">2011服務學習暨社會服務隊成果發表會</td>
-							<td class="table-column6">課務組</td>
-							<td class="expand-btn"><img src="images/arrow.svg"></td>
-						</tr>
-						<tr class="table-expand-row">
-							<td class="table-expand-td">
-								<p class="table-detail-title">時數</p>
-								<p>5</p>
-							</td>
-							<td class="table-expand-td">
-								<p class="table-date">起訖日期</p>
-								<p>2020/01~2020/01</p>
-							</td>
-							<td class="table-expand-td">
-								<p class="table-num">證書號</p>
-								<p>001</p>
-							</td>
-							<td class="table-expand-td">
-								<p class="table-detail-title">狀態</p>
-								<p>合格</p>
-							</td>
+							<td class="table-column7">通識A5*</td>
+							<td class="table-column9">111-2</td>
+							<td class="table-column8">Principle of Macroeconomics</td>
+							<td class="table-column5">MD&PH5024</td>
+							<td class="table-column5">40552700</td>
+							<td>02</td>
+							<td>3</td>
+							<td>抵免</td>
+							<td></td>
 						</tr>
 					</table>
 				</div>
