--- a/learning-footprint.html
+++ b/learning-footprint.html
@@ -21,9 +21,9 @@
 				<a href="teacher-info.html"><img src="images/ic-teacher.svg">導師資訊</a>
 				<label>學習歷程</label>
 				<a href="course-map.html"><img src="images/ic-coursemap.svg">課程地圖</a>
-				<a href="learning-footprint.html"><img src="images/blue-ic-footprints.svg">學習足跡</a>
+				<a href="learning-footprint.html"><img src="images/ic-footprints.svg">學習足跡</a>
 				<a href="course-overview.html"><img src="images/ic-classgrid.svg">修課總覽</a>
-				<a href="graduate.html"><img src="images/ic-classgrid.svg">畢業審查</a>
+				<a href="graduate.html"><img src="images/ic-graduation.svg">畢業審查</a>
 				<label>活動經歷</label>
 				<a href="club.html"><img src="images/ic-societies.svg">社團經歷</a>
 				<a href="competition.html"><img src="images/ic-cup.svg">競賽成果</a>
@@ -100,61 +100,150 @@
 			</div>
 			<div class="main-container">
 				<h1>雙主修紀錄</h1>
-				<div class="sub-container">
-					<table>
-						<tr>
-							<th class="table-column1\">核准學年期</th>
-							<th class="table-column2">修讀科系</th>
-						</tr>
-						<tr>
-							<td class="table-column1">100-1</td>
-							<td class="table-column2">中國文學系</td>
-						</tr>
-					</table>
-				</div>
+					<div class="desktop">	
+						<div class="sub-container">
+							<table>
+								<tr>
+									<th class="table-column1\">核准學年期</th>
+									<th class="table-column2">修讀科系</th>
+								</tr>
+								<tr>
+									<td class="table-column1">100-1</td>
+									<td class="table-column2">中國文學系</td>
+								</tr>
+							</table>
+						</div>
+					</div>
+					<div class="phone">
+						<div class="sub-container">
+							<table>
+								<tr>
+									<th colspan="2">修讀科系</th>
+								</tr>
+								<tr>
+									<td class="table-phone-expand">中國文學系</td>
+									<td class="expand-btn"><img src="images/arrow.svg"></td>
+								</tr>
+								<tr class="table-expand-row">
+									<td class="table-expand-td" colspan="2">
+										<p class="table-detail-title">核准學年期</p>
+										<p>100-1</p>
+									</td>
+								</tr>
+							</table>
+						</div>
+					</div>
 			</div>
 			<div class="main-container">
 				<h1>跨校輔系雙主修紀錄</h1>
-				<div class="sub-container">
-					<table>
-						<tr>
-							<th class="table-column1">核准學年期</th>
-							<th class="table-column3">修讀學校</th>
-							<th class="table-column4">修讀科系</th>
-						</tr>
-						<tr>
-							<td class="table-column1">100-1</td>
-							<td class="table-column3">國立臺灣科系大學</td>
-							<td class="table-column4">應用外語系</td>
-						</tr>
-					</table>
+				<div class="desktop">	
+					<div class="sub-container">
+						<table>
+							<tr>
+								<th class="table-column1">核准學年期</th>
+								<th class="table-column3">修讀學校</th>
+								<th class="table-column4">修讀科系</th>
+							</tr>
+							<tr>
+								<td class="table-column1">100-1</td>
+								<td class="table-column3">國立臺灣師範大學</td>
+								<td class="table-column4">應用外語系</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+				<div class="phone">
+					<div class="sub-container">
+						<table>
+							<tr>
+								<th colspan="3">修讀科系</th>
+							</tr>
+							<tr>
+								<td class="table-phone-expand">中國文學系</td>
+								<td></td>
+								<td class="expand-btn"><img src="images/arrow.svg"></td>
+							</tr>
+							<tr class="table-expand-row">
+								<td class="table-expand-td">
+									<p class="table-detail-title">核准學年期</p>
+									<p>100-1</p>
+								</td>
+								<td class="table-expand-td" colspan="2">
+									<p class="table-detail-title">修讀學校</p>
+									<p>國立臺灣師範大學</p>
+								</td>
+							</tr>
+						</table>
+					</div>
 				</div>
 			</div>
 			<div class="main-container">
 				<h1>交換生紀錄</h1>
-				<div class="sub-container">
-					<table>
-						<tr>
-							<th class="table-column1">學年期</th>
-							<th class="table-column3">交換學校</th>
-							<th class="table-column4">時長</th>
-						</tr>
-						<tr>
-							<td class="table-column1">112-2</td>
-							<td class="table-column3">荷蘭萊頓大學</td>
-							<td class="table-column4">1學期</td>
-						</tr>
-						<tr>
-							<td class="table-column1">113-2</td>
-							<td class="table-column3">巴黎高等政治學院</td>
-							<td class="table-column4">1學期</td>
-						</tr>
-					</table>
+				<div class="desktop">	
+					<div class="sub-container">
+						<table>
+							<tr>
+								<th class="table-column1">學年期</th>
+								<th class="table-column3">交換學校</th>
+								<th class="table-column4">時長</th>
+							</tr>
+							<tr>
+								<td class="table-column1">100-1</td>
+								<td class="table-column3">荷蘭萊頓大學</td>
+								<td class="table-column4">1學期</td>
+							</tr>
+							<tr>
+								<td class="table-column1">100-1</td>
+								<td class="table-column3">荷蘭萊頓大學</td>
+								<td class="table-column4">1學期</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+				<div class="phone">
+					<div class="sub-container">
+						<table>
+							<tr>
+								<th colspan="3">交換學校</th>
+							</tr>
+							<tr>
+								<td class="table-phone-expand">荷蘭萊頓大學</td>
+								<td></td>
+								<td class="expand-btn"><img src="images/arrow.svg"></td>
+							</tr>
+							<tr class="table-expand-row">
+								<td class="table-expand-td">
+									<p class="table-detail-title">學年期</p>
+									<p>100-1</p>
+								</td>
+								<td class="table-expand-td" colspan="2">
+									<p class="table-detail-title">時長</p>
+									<p>1學期</p>
+								</td>
+							</tr>
+							<tr>
+								<td class="table-phone-expand">荷蘭萊頓大學</td>
+								<td></td>
+								<td class="expand-btn"><img src="images/arrow.svg"></td>
+							</tr>
+							<tr class="table-expand-row">
+								<td class="table-expand-td">
+									<p class="table-detail-title">學年期</p>
+									<p>100-1</p>
+								</td>
+								<td class="table-expand-td" colspan="2">
+									<p class="table-detail-title">時長</p>
+									<p>1學期</p>
+								</td>
+							</tr>
+						</table>
+					</div>
 				</div>
 			</div>
 			<div class="main-container">
 				<h1>學程紀錄</h1>
-				<div class="sub-container">
+				<div class="desktop">
+					<div class="sub-container">
 					<table>
 						<tr>
 							<th class="table-column1">學年期/日期</th>
@@ -172,11 +261,52 @@
 							<td class="table-column4">核准</td>
 						</tr>
 					</table>
+					</div>
+				</div>
+				<div class="phone">
+					<div class="sub-container">
+						<table>
+							<tr>
+								<th colspan="3">申請學程</th>
+							</tr>
+							<tr>
+								<td class="table-phone-expand">教育學程</td>
+								<td></td>
+								<td class="expand-btn"><img src="images/arrow.svg"></td>
+							</tr>
+							<tr class="table-expand-row">
+								<td class="table-expand-td">
+									<p class="table-detail-title">學年期/日期</p>
+									<p>100-1</p>
+								</td>
+								<td class="table-expand-td" colspan="2">
+									<p class="table-detail-title">狀態</p>
+									<p>核准</p>
+								</td>
+							</tr>
+							<tr>
+								<td class="table-phone-expand">教育學程</td>
+								<td></td>
+								<td class="expand-btn"><img src="images/arrow.svg"></td>
+							</tr>
+							<tr class="table-expand-row">
+								<td class="table-expand-td">
+									<p class="table-detail-title">學年期/日期</p>
+									<p>100-1</p>
+								</td>
+								<td class="table-expand-td" colspan="2">
+									<p class="table-detail-title">狀態</p>
+									<p>核准</p>
+								</td>
+							</tr>
+						</table>
+					</div>
 				</div>
 			</div>
 			<div class="main-container">
 				<h1>研習活動</h1>
-				<div class="sub-container">
+				<div class="desktop">
+					<div class="sub-container">
 					<table>
 						<tr>
 							<th class="table-column5">學年期</th>
@@ -217,11 +347,66 @@
 							</td>
 						</tr>
 					</table>
+					</div>
+				</div>
+				<div class="phone">
+					<div class="sub-container">
+						<table>
+							<tr>
+								<th colspan="4">活動名稱</th>
+							</tr>
+							<tr>
+								<td class="table-phone-expand" colspan="3">台大椰林講座-東京大學藤井輝夫校長</td>
+								<td class="expand-btn"><img src="images/arrow.svg"></td>
+							</tr>
+							<tr class="table-expand-row">
+								<td class="table-expand-td">
+									<p class="table-detail-title">學年期</p>
+									<p>112-2</p>
+								</td>
+								<td class="table-expand-td">
+									<p class="table-detail-title">日期</p>
+									<p>2023/12/12</p>
+								</td>
+								<td class="table-expand-td">
+									<p class="table-detail-title">主辦單位</p>
+									<p>共同教育中心</p>
+								</td>
+								<td class="table-expand-td">
+									<p class="table-detail-title">活動性質</p>
+									<p>台大椰林講座</p>
+								</td>
+							</tr>
+							<tr>
+								<td class="table-phone-expand" colspan="3">台大椰林講座-東京大學藤井輝夫校長</td>
+								<td class="expand-btn"><img src="images/arrow.svg"></td>
+							</tr>
+							<tr class="table-expand-row">
+								<td class="table-expand-td">
+									<p class="table-detail-title">學年期</p>
+									<p>112-2</p>
+								</td>
+								<td class="table-expand-td">
+									<p class="table-detail-title">日期</p>
+									<p>2023/12/12</p>
+								</td>
+								<td class="table-expand-td">
+									<p class="table-detail-title">主辦單位</p>
+									<p>共同教育中心</p>
+								</td>
+								<td class="table-expand-td">
+									<p class="table-detail-title">活動性質</p>
+									<p>台大椰林講座</p>
+								</td>
+							</tr>
+						</table>
+					</div>
 				</div>
 			</div>
 			<div class="main-container">
 				<h1>研習活動授予認證</h1>
-				<div class="sub-container">
+				<div class="desktop">
+					<div class="sub-container">
 					<table>
 						<tr>
 							<th class="table-column5">學年期</th>
@@ -254,11 +439,58 @@
 							</td>
 						</tr>
 					</table>
+					</div>
 				</div>
+				<div class="phone">
+					<div class="sub-container">
+						<table>
+							<tr>
+								<th colspan="4">活動名稱</th>
+							</tr>
+							<tr>
+								<td class="table-phone-expand" colspan="3">111-1教學助理認證研習會</td>
+								<td class="expand-btn"><img src="images/arrow.svg"></td>
+							</tr>
+							<tr class="table-expand-row">
+								<td class="table-expand-td">
+									<p class="table-detail-title">學年期</p>
+									<p>112-2</p>
+								</td>
+								<td class="table-expand-td">
+									<p class="table-detail-title">主辦單位</p>
+									<p>教學發展中心教師發展組</p>
+								</td>
+								<td class="table-expand-td" colspan="2">
+									<p class="table-detail-title">活動性質</p>
+									<p>協助本校有意培任教學助理的學生瞭解相關工作內教師發展組認證研習會容，培育核心能力，成為授課老師的強力助手。</p>
+								</td>
+							</tr>
+							<tr>
+								<td class="table-phone-expand" colspan="3">111-1教學助理認證研習會</td>
+								<td class="expand-btn"><img src="images/arrow.svg"></td>
+							</tr>
+							<tr class="table-expand-row">
+								<td class="table-expand-td">
+									<p class="table-detail-title">學年期</p>
+									<p>112-2</p>
+								</td>
+								<td class="table-expand-td">
+									<p class="table-detail-title">主辦單位</p>
+									<p>教學發展中心教師發展組</p>
+								</td>
+								<td class="table-expand-td" colspan="2">
+									<p class="table-detail-title">活動性質</p>
+									<p>協助本校有意培任教學助理的學生瞭解相關工作內教師發展組認證研習會容，培育核心能力，成為授課老師的強力助手。</p>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</div>	
 			</div>
 			<div class="main-container">
 				<h1>研習訓練資料</h1>
-				<div class="sub-container">
+				<div class="desktop">
+					<div class="sub-container">
 					<table>
 						<tr>
 							<th class="table-column5">學年期</th>
@@ -315,6 +547,46 @@
 							</td>
 						</tr>
 					</table>
+					</div>
+				</div>
+				<div class="phone">
+					<div class="sub-container">
+						<table>
+							<tr>
+								<th colspan="7">活動名稱</th>
+							</tr>
+							<tr>
+								<td class="table-phone-expand" colspan="6">2011服務學習暨社會服務隊成果發表會</td>
+								<td class="expand-btn"><img src="images/arrow.svg"></td>
+							</tr>
+							<tr class="table-expand-row">
+								<td class="table-expand-td">
+									<p class="table-detail-title">學年期</p>
+									<p>112-2</p>
+								</td>
+								<td class="table-expand-td">
+									<p class="table-detail-title">主辦單位</p>
+									<p>課務組</p>
+								</td>
+								<td class="table-expand-td">
+									<p class="table-detail-title">時數</p>
+									<p>5</p>
+								</td>
+								<td class="table-expand-td">
+									<p class="table-detail-title">起迄日期</p>
+									<p>2020/01~2020/01</p>
+								</td>
+								<td class="table-expand-td">
+									<p class="table-detail-title">狀態</p>
+									<p>合格</p>
+								</td>
+								<td class="table-expand-td" colspan="2">
+									<p class="table-detail-title">證書號</p>
+									<p>001</p>
+								</td>
+							</tr>
+						</table>
+					</div>
 				</div>
 			</div>
 		</section>
