--- a/service.html
+++ b/service.html
@@ -7,7 +7,6 @@
 	<meta charset="utf-8">
 	<title>教務資訊服務網</title>
 	<link rel="stylesheet" type="text/css" href="css/learning-footprint.css" />
-	<script src="js/learning-footprint.js"></script>
 	<script src="js/basic-info.js"></script>
 </head>
 
@@ -21,16 +20,20 @@
 				<a href="teacher-info.html"><img src="images/ic-teacher.svg">導師資訊</a>
 				<label>學習歷程</label>
 				<a href="course-map.html"><img src="images/ic-coursemap.svg">課程地圖</a>
-				<a href="learning-footprint.html"><img src="images/blue-ic-footprints.svg">學習足跡</a>
+				<a href="learning-footprint.html"><img src="images/ic-footprints.svg">學習足跡</a>
 				<a href="course-overview.html"><img src="images/ic-classgrid.svg">修課總覽</a>
-				<a href="graduate.html"><img src="images/ic-classgrid.svg">畢業審查</a>
+				<a href="graduate.html"><img src="images/ic-graduation.svg">畢業審查</a>
 				<label>活動經歷</label>
 				<a href="club.html"><img src="images/ic-societies.svg">社團經歷</a>
 				<a href="competition.html"><img src="images/ic-cup.svg">競賽成果</a>
 				<a href="service.html"><img src="images/ic-services.svg">服務學習</a>
 			</div>
 		</nav>
-
+		<section class="main-section">
+			<div class="header-menu">
+				<div class="ic-news-board"><img src="images/ic-news-board.svg"></div>
+				<div class="ic-login"><img src="images/ic-personal.svg"></div>
+			</div>
 		<div class="main-container">
 			<h1>服務學習</h1>
 			<div class="sub-container">
@@ -58,7 +61,7 @@
 				</table>
 			</div>
 		</div>
-
+		</section>
 	</main>
 	<footer>
 		<div class="footer-container">
