--- a/club.html
+++ b/club.html
@@ -21,9 +21,9 @@
 				<a href="teacher-info.html"><img src="images/ic-teacher.svg">導師資訊</a>
 				<label>學習歷程</label>
 				<a href="course-map.html"><img src="images/ic-coursemap.svg">課程地圖</a>
-				<a href="learning-footprint.html"><img src="images/blue-ic-footprints.svg">學習足跡</a>
+				<a href="learning-footprint.html"><img src="images/ic-footprints.svg">學習足跡</a>
 				<a href="course-overview.html"><img src="images/ic-classgrid.svg">修課總覽</a>
-				<a href="graduate.html"><img src="images/ic-classgrid.svg">畢業審查</a>
+				<a href="graduate.html"><img src="images/ic-graduation.svg">畢業審查</a>
 				<label>活動經歷</label>
 				<a href="club.html"><img src="images/ic-societies.svg">社團經歷</a>
 				<a href="competition.html"><img src="images/ic-cup.svg">競賽成果</a>
@@ -42,33 +42,33 @@
 				<div class="sub-container">
 					<table>
 						<tr>
-							<th>學年期</th>
-							<th>活動名稱</th>
-							<th>職別</th>
+							<th class="table-column7">學年期</th>
+							<th class="table-column4">活動名稱</th>
+							<th class="table-column4">職別</th>
 							<th>職稱</th>
 						</tr>
 						<tr>
-							<td>100-1</td>
-							<td>藍聲口琴社</td>
-							<td>社員</td>
+							<td class="table-column7">100-1</td>
+							<td class="table-column4">藍聲口琴社</td>
+							<td class="table-column4">社員</td>
 							<td></td>
 						</tr>
 						<tr>
-							<td>100-1</td>
-							<td>藍聲口琴社</td>
-							<td>社員</td>
+							<td class="table-column7">100-1</td>
+							<td class="table-column4">藍聲口琴社</td>
+							<td class="table-column4">社員</td>
 							<td></td>
 						</tr>
 						<tr>
-							<td>100-1</td>
-							<td>藍聲口琴社</td>
-							<td>社員</td>
+							<td class="table-column7">100-1</td>
+							<td class="table-column4">藍聲口琴社</td>
+							<td class="table-column4">社員</td>
 							<td></td>
 						</tr>
 						<tr>
-							<td>100-1</td>
-							<td>藍聲口琴社</td>
-							<td>社員</td>
+							<td class="table-column7">100-1</td>
+							<td class="table-column4">藍聲口琴社</td>
+							<td class="table-column4">社員</td>
 							<td></td>
 						</tr>
 					</table>
