--- a/teacher-info.html
+++ b/teacher-info.html
@@ -20,9 +20,9 @@
 				<a href="teacher-info.html"><img src="images/ic-teacher.svg">導師資訊</a>
 				<label>學習歷程</label>
 				<a href="course-map.html"><img src="images/ic-coursemap.svg">課程地圖</a>
-				<a href="learning-footprint.html"><img src="images/blue-ic-footprints.svg">學習足跡</a>
+				<a href="learning-footprint.html"><img src="images/ic-footprints.svg">學習足跡</a>
 				<a href="course-overview.html"><img src="images/ic-classgrid.svg">修課總覽</a>
-				<a href="graduate.html"><img src="images/ic-classgrid.svg">畢業審查</a>
+				<a href="graduate.html"><img src="images/ic-graduation.svg">畢業審查</a>
 				<label>活動經歷</label>
 				<a href="club.html"><img src="images/ic-societies.svg">社團經歷</a>
 				<a href="competition.html"><img src="images/ic-cup.svg">競賽成果</a>
@@ -38,10 +38,10 @@
 			<div class="main-container">
 				<h1>導師資訊
 					<div class="btn-semester">
-						<a href="#" class="btn-edit">109</a>
-						<a href="#" class="btn-edit">110</a>
-						<a href="#" class="btn-edit">111</a>
-						<a href="#" class="btn-edit">112</a>
+						<a href="#" class="btn-semester-num">109</a>
+						<a href="#" class="btn-semester-num">110</a>
+						<a href="#" class="btn-semester-num">111</a>
+						<a href="#" class="btn-semester-num">112</a>
 					</div>
 				</h1>
 				<div class="sub-container">
